@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 1a370f2d21740a2b1173679a8b7b2a1f70d762c4 ChangeLog
+SHA1 3e1c89108e77d2b8db1be46ee0e9903a2f91a536 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 9914a4ccf26bbe855ebc7f0883fb7c7d06d9210c META.yml
+SHA1 48425b2f938e7bfa4ebb38235d746be06ca38e33 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 f6f62a568457dc90f89c4e6f7775398404b9d85a lib/Term/Menus.pm
+SHA1 4f6d5b981731c9047c24c202a715f9523c48a7d3 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk6DhN8ACgkQdsVAdUjO9IkjDQCdE+2gDEdAkluloGsbbsNz80Nk
-ihwAn3p9+M386ZEC5N3F0wCOl1GR/TA8
-=51OM
+iEYEARECAAYFAk6JG3gACgkQdsVAdUjO9Il/xQCghY5ISKDHqpBiRldmfcnQ873a
+wc8AnRqIn62U4KImkiuRjUu8EQ0042h9
+=emb3
 -----END PGP SIGNATURE-----
