@@ -1,3 +1,13 @@
+2011-10-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Fix for FullAuto.
+
+
+2011-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Fix for FullAuto.
+
+
 2011-09-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.0 released. Ran out numbers and didn't
